syntax = "proto3";

// Placeholder for a cool featuer

import "google/api/annotations.proto";
import "types.proto";

option go_package = "./proto";

service TaskService {
  rpc CreateTask(CreateTaskRequest) returns (CreateTaskResponse) {
    option (google.api.http) = {
      post: "/v1/task/{agent_id}"
      body: "task"
    };
  }

  rpc DeleteTask(DeleteTaskRequest) returns (DeleteTaskResponse) {
    option (google.api.http) = {
      delete: "/v1/task/{task_id}"
    };
  }

  rpc GetTask(GetTaskRequest) returns (GetTaskResponse) {
    option (google.api.http) = {
      get: "/v1/task/{task_id}"
    };
  }
}

message CreateTaskRequest {
  string agent_id = 1;
  Task task = 2;
}

message DeleteTaskRequest {
  string task_id = 1;
}

message GetTaskRequest {
  string task_id = 1;
}

message CreateTaskResponse {}

message DeleteTaskResponse {}

message GetTaskResponse {
  Task task = 1;
}
