syntax = "proto3";

option go_package = "./proto";

import "types.proto";
import "google/protobuf/empty.proto";

service PluginService {
    rpc ListLoadedPlugins (google.protobuf.Empty) returns (ListPluginsResponse) {}
    rpc ListPlugins (google.protobuf.Empty) returns (ListPluginsResponse) {}
    rpc RunPlugin (RunPluginRequest) returns (RunPluginResponse) {}
    rpc LoadPlugin (LoadPluginRequest) returns (LoadPluginResponse) {}
}

message RunPluginRequest {

}

message LoadPluginRequest {
    string Name = 1;
    string Version = 2;
	string Author = 3;
}

message ListPluginsResponse {
    bool success = 1;
    repeated Plugin data = 2;
}

message RunPluginResponse {
    bool success = 1;
}

message LoadPluginResponse {
    bool success = 1;
    Plugin data = 2;
}
